# finance-binance-getaway

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
